@startuml BossHandling
!pragma layout smetana
skinparam classAttributeIconSize 0

abstract class Enemy {
    # float x, y
    # int hp, maxHp
    + takeDamage(int damage)
    + {abstract} onAttack()
    + {abstract} onTalk()
    + {abstract} getDialogue() : String
    + {abstract} isDefeated() : boolean
    + {abstract} getDamage() : int
    + {abstract} getName() : String
    + getHp() : int
}

abstract class Boss {
    # int talkCount
    # int dialogueIndex
    + onTalk()
    + isTalkFinalPhase() : boolean
}

class GuardianBoss {
    - CrystalType crystal
    - int attackCount
    + onAttack()
    + isDefeated() : boolean
    ' RED: attackCount >= 5
    ' GREEN: talkCount >= 3 && attackCount >= 3
    ' BLUE: talkCount >= 5
}

class MirrorRedBoss {
    + onAttack()
    + isDefeated() : boolean
    ' talkCount >= 7
}

class MirrorBlueBoss {
    + onAttack()
    ' deals all remaining HP in one attack
    + isDefeated() : boolean
    ' hp <= 0
    + isTalkFinalPhase() : boolean
    ' dialogueIndex >= 4
}

class MirrorGreenBoss {
    + onAttack()
    + isDefeated() : boolean
    ' hp <= 0
}

interface "BattleManager.Listener" as BattleListener {
    + onBattleStarted(Enemy)
    + onEnemyHpChanged(String)
    + onDialogueChanged(String)
    + onPlayerHpChanged(int)
    + onEnemyKilled(Enemy)
    + onEnemySpared(Enemy)
    + onBossDefeated()
    + onPlayerDefeated()
    + onBattleExited()
}

class BattleManager {
    - boolean inBattle
    - boolean playerTurn
    - boolean enemyHasAttacked
    - Enemy currentEnemy
    - Listener listener
    + startBattle(Enemy)
    + onAttack()
    + onTalk()
    + tickEnemyTurn(Player)
    + isInBattle() : boolean
    + isPlayerTurn() : boolean
    + getCurrentEnemy() : Enemy
    - endPlayerTurn()
    - exitBattle()
}

Enemy <|-- Boss
Boss <|-- GuardianBoss
Boss <|-- MirrorRedBoss
Boss <|-- MirrorBlueBoss
Boss <|-- MirrorGreenBoss

BattleManager --> Enemy : currentEnemy
BattleManager --> BattleListener : notifies
BattleManager ..|> BattleListener : <<uses>>

note right of GuardianBoss
  Defeat condition depends on CrystalType:
  RED  → 5 attacks
  GREEN → 3 talks + 3 attacks
  BLUE  → 5 talks
end note

note right of MirrorBlueBoss
  onAttack() deals all
  remaining HP at once
  (one-shot condition)
end note

note right of MirrorRedBoss
  Near-invincible HP (999).
  Defeated only by 7 talks.
end note

@enduml
